# SLQ-MPC

./: CMakeLists.txt  README.md
include/: CARE.hpp  CostFunc.hpp  LQR.hpp  MPC.hpp  MujocoInterface.hpp  SLQ.hpp  Sim.hpp  mujocosimhpp  types.hpp
include/Dynamics/: Dynamics.hpp  cartpole.hpp  quadrotor.hpp
include/Robots/: PendulumSim.hpp  QuadrotorSim.hpp  RobotSim.hpp  Robots.hpp
src/: CARE.cpp  CostFunc.cpp  LQR.cpp  MujocoInterface.cpp  SLQ.cpp  Sim.cpp  mujcoosimcpy  slq_mpc.cpp
src/Dynamics/: cartpole.cpp  modifiedcpy  quadrotor.cpp
src/Robots/: PendulumSim.cpp  QuadrotorSim.cpp
